# calibration-trainer

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
docs/: initial-specs(ARCHIVE).md  sample_questions.json
src/calibration_trainer/: __init__.py  __main__.py  app.py
src/calibration_trainer/database/: __init__.py  repository.py  schema.py
src/calibration_trainer/models/: __init__.py  question.py  response.py  settings.py
src/calibration_trainer/questions/: __init__.py  loader.py
src/calibration_trainer/questions/data/: bundled_questions.json
src/calibration_trainer/scoring/: __init__.py  binary_log.py  calibration.py  greenberg.py
src/calibration_trainer/screens/: __init__.py  dashboard.py  modals.py  settings.py  stats.py  training.py
src/calibration_trainer/styles/: app.tcss
src/calibration_trainer/widgets/: __init__.py  binary_input.py  calibration_chart.py  interval_input.py
tests/: __init__.py  test_models.py  test_repository.py  test_scoring.py  test_screens.py  test_widgets.py
