[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibration-trainer"
version = "0.1.0"
description = "A TUI application for improving probabilistic calibration skills"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Russell" }
]
dependencies = [
    "textual>=0.47.0",
    "textual-plotext>=0.2.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
calibration-trainer = "calibration_trainer.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calibration_trainer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
calibration-trainer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
start = "calibration-trainer"

[tool.pixi.feature.dev.tasks]
test = "pytest"
